Completed unit & integration tests + code cleanup